[package]
name = "pinoedino"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merx = {git="https://github.com/Fi3/merx/"}
lazy_static = "1.4.0"
csv = "1.1"
serde = {version = "1.0.106", features = ["derive"]}

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

